# make2cmake

./: CMakeLists.txt  README.md  generate_cmakelists.py  stdwx.h
